fix spacing and color in USer and NewUSer components

--- a/frontend-budget-app/src/index.css
+++ b/frontend-budget-app/src/index.css
@@ -193,10 +193,19 @@ body {
   font-weight: lighter;
 }
 
-.center {
+.center, .ShowPage, .NewTemplateForm, .NewBudgetForm {
   display: flex;
   flex-direction: column;
   align-items: center;
+}
+
+.center {
+  color: rgb(8, 220, 235);
+  font-size: 1.5em;
+}
+
+.center > h1 {
+  color: rgb(248, 247, 234);
 }
 
 
